# wxauto

./: .gitignore  README.md  pyproject.toml
wxauto/: __init__.py  languages.py  logger.py  param.py  wx.py
wxauto/msgs/: base.py  msg.py
wxauto/ui/: base.py  browser.py  chatbox.py  component.py  main.py  navigationbox.py  sessionbox.py
wxauto/uia/: __init__.py  uiautomation.py  uiplug.cp310-win_amd64.pyd
wxauto/utils/: lock.py  win32.py
