[project]
name = "wxauto"
version = "39.1.12"
description = "wxauto 3.9 V2 version"
authors = [
    { name = "dana", email = "dana2777@163.com" }
]
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "tenacity",
    "pywin32",
    "pyperclip",
    "pillow",
    "psutil",
    "colorama",
    "comtypes"
]

[tool.setuptools.packages.find]
include = ["wxauto*"]  # 只包含 wxauto 相关的包

[tool.setuptools.package-data]
"wxauto" = ["*.pyd", 'uia/*.pyd']  # 包含 wxauto 目录下的所有 .pyd 文件

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"